--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -35,11 +35,11 @@
     <menu id="48">
       <phrase id="menutext" value="Patients List" />
     </menu>
-    <menu id="109">
-      <phrase id="menutext" value="Appointments" />
-    </menu>
     <menu id="22">
       <phrase id="menutext" value="Appointments" />
+    </menu>
+    <menu id="109">
+      <phrase id="menutext" value="Calendar" />
     </menu>
     <menu id="24">
       <phrase id="menutext" value="Visits" />
@@ -894,27 +894,27 @@
       </field>
     </table>
     <table id="patient_appointments">
-      <phrase id="tblcaption" value="patient appointments" />
+      <phrase id="tblcaption" value="Appointments" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="Appointment ID" />
       </field>
       <field id="patient_id">
-        <phrase id="fldcaption" value="patient id" />
+        <phrase id="fldcaption" value="Patient Name" />
       </field>
       <field id="_title">
-        <phrase id="fldcaption" value="title" />
+        <phrase id="fldcaption" value="Title" />
       </field>
       <field id="description">
-        <phrase id="fldcaption" value="description" />
+        <phrase id="fldcaption" value="Description" />
       </field>
       <field id="doctor_id">
-        <phrase id="fldcaption" value="doctor id" />
+        <phrase id="fldcaption" value="Doctor" />
       </field>
       <field id="start_date">
-        <phrase id="fldcaption" value="start date" />
+        <phrase id="fldcaption" value="Start Date" />
       </field>
       <field id="end_date">
-        <phrase id="fldcaption" value="end date" />
+        <phrase id="fldcaption" value="End Date" />
       </field>
       <field id="is_all_day">
         <phrase id="fldcaption" value="All Day?" />
@@ -924,13 +924,13 @@
         <phrase id="fldtagcaption2" value="No" />
       </field>
       <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="User ID" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Appointment Date" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="patient_vaccinations">
