--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -957,30 +957,36 @@
       </field>
     </table>
     <table id="patient_vaccinations">
-      <phrase id="tblcaption" value="patient vaccinations" />
+      <phrase id="tblcaption" value="Vaccinations" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/No" />
       </field>
       <field id="patient_id">
-        <phrase id="fldcaption" value="patient id" />
+        <phrase id="fldcaption" value="Patient Name" />
       </field>
       <field id="visit_id">
-        <phrase id="fldcaption" value="visit id" />
+        <phrase id="fldcaption" value="Check-In Title" />
       </field>
       <field id="service_id">
-        <phrase id="fldcaption" value="service id" />
+        <phrase id="fldcaption" value="Vaccination" />
       </field>
       <field id="status">
-        <phrase id="fldcaption" value="status" />
+        <phrase id="fldcaption" value="Status" />
+        <phrase id="fldtagvalue1" value="Done" />
+        <phrase id="fldtagcaption1" value="Done" />
+        <phrase id="fldtagvalue2" value="Cancelled" />
+        <phrase id="fldtagcaption2" value="Cancelled" />
+        <phrase id="fldtagvalue3" value="Deffered" />
+        <phrase id="fldtagcaption3" value="Deffered" />
       </field>
       <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Submitted By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Submission Date" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="patient_visits">
