--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -87,7 +87,7 @@
       <phrase id="menutext" value="Lab Queue" />
     </menu>
     <menu id="12">
-      <phrase id="menutext" value="Lab Reports" />
+      <phrase id="menutext" value="Test Reports" />
     </menu>
     <menu id="54">
       <phrase id="menutext" value="Pharmacy Setup" />
@@ -245,31 +245,22 @@
     <table id="diagnosis">
       <phrase id="tblcaption" value="diagnosis" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/NO" />
       </field>
-      <field id="patient_id">
-        <phrase id="fldcaption" value="patient id" />
-      </field>
-      <field id="visit_id">
-        <phrase id="fldcaption" value="visit id" />
-      </field>
-      <field id="report_id">
-        <phrase id="fldcaption" value="report id" />
+      <field id="lab_test_report_id">
+        <phrase id="fldcaption" value="Report ID" />
       </field>
       <field id="disease_id">
-        <phrase id="fldcaption" value="disease id" />
-      </field>
-      <field id="additional_findings">
-        <phrase id="fldcaption" value="additional findings" />
+        <phrase id="fldcaption" value="Disease" />
       </field>
       <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Submitted By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Submission Date" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="diseases">
